# coord

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: coord.rb
scripts/: demo.sh  release-formula.sh
src/: lib.rs  main.rs  server.rs
src/a2a/: mod.rs
src/cli/: client.rs  format.rs  init.rs  mod.rs  tui.rs  wait.rs
src/core/: mod.rs  store.rs  types.rs
src/mcp/: mod.rs
src/vault/: mod.rs
tests/: cancel_race.rs  lease.rs  list_filter.rs  multi_client.rs  protocol_two_tabs.rs  race.rs  tui_render.rs  wait_longpoll.rs
