[package]
name = "coord"
version = "0.3.0"
edition = "2021"
authors = ["Denis Tu <dmarshaltu@gmail.com>"]
description = "A local coordinator for parallel AI coding agents. Atomic task claims, blocking watch primitive, MCP + A2A. One binary."
license = "MIT"
repository = "https://github.com/DmarshalTU/coord"
homepage = "https://github.com/DmarshalTU/coord"
readme = "README.md"
keywords = ["ai", "agents", "a2a", "mcp", "coordination"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "coord"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
directories = "5"
parking_lot = "0.12"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
